--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^8.6.8",
+    "firebase-admin": "^12.1.1",
+    "generate-api-key": "^1.0.2",
+    "stripe": "^15.9.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.3"
   }
 }
