--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ STORAGE_BUCKET=test002-f0eba.appspot.com
 MESSAGING_SENDER_ID=86044671885
 APP_ID=1:86044671885:web:294928be23351e8fe4c7c4
 MEASUREMENTID=G-K9JR5MKD0Z
+
+EMAIL_USER=nguyenhungit.92@gmail.com
+EMAIL_PASS=qekiiaywcswbplax
+EMAIL_PORT=587
+EMAIL_HOST=smtp.gmail.co
+
+JWT_SECRET_KEY=my_secrect_key
