update .env-copy file

--- a/backend/.env_copy
+++ b/backend/.env_copy
@@ -1,7 +1,7 @@
 #express server config
-PORT=8000
-HOST=localhost
-HOST_URL=http://localhost:8000
+PORT=
+HOST=
+HOST_URL=
 
 
 #firebase database config
@@ -15,8 +15,9 @@ MESSAGING_SENDER_ID=
 APP_ID=
 MEASUREMENTID=
 
-#email config
 EMAIL_USER=
 EMAIL_PASS=
 EMAIL_PORT=
 EMAIL_HOST=
+
+JWT_SECRET_KEY=
